test/expected/explain_cast_a3a5a7i.out
explain (int[3][5][7])x
            ^
13: error: can not cast into array; did you mean cast into pointer?
